# libredwg-cpp

./: .gitignore  README.md
examples/: conversion.py  logging_example.py
python/libredwg_cpp/: __init__.py  __init__.pyi  libredwg_cpp.pyi
src/bindings/: CMakeLists.txt  py_ilogger_wrapper.cpp  py_ilogger_wrapper.hpp  pyilogger.cpp  pyilogger.hpp  pylib.cpp
src/lib/: CMakeLists.txt  document.cpp  dwg.hpp  logging_dispatcher.cpp
src/lib/dwg_logging_override/: CMakeLists.txt  custom_logging.h  dwg_logging.c
src/lib/dwg_logging_override/include/: dwg_logging.h
src/lib/include/libredwg_cpp/: ilogger.hpp  logging_dispatcher.hpp  logging_level.hpp
tests/: test_empty.py  test_libredwg.py  test_logging.py  test_shapes.py  utils.py
